--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003 --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "clear-db": "node scripts/clear-database.js"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -16,8 +17,9 @@
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.2.0",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.9.4",
     "next": "14.2.24",
     "next-auth": "^4.24.11",
@@ -25,6 +27,8 @@
     "postcss": "^8.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   },
