--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "react-zxing": "^2.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   },
