--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,38 @@
-# MongoDB Atlas Connection String
-# Format: mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority
-# Example: mongodb+srv://myuser:mypassword@cluster0.xxxxx.mongodb.net/whiskey-inventory?retryWrites=true&w=majority
-MONGODB_URI=mongodb+srv://username:password@your-cluster.mongodb.net/whiskey-inventory?retryWrites=true&w=majority
+# Whiskey Vault Environment Variables
+# Copy this file to .env.local for development or .env.production for production
+
+# MongoDB Connection
+# For Docker on Mac/Windows connecting to host MongoDB: mongodb://host.docker.internal:27017/whiskey-vault?replicaSet=rs0
+# For local development: mongodb://192.168.1.119:27017/whiskey-vault?replicaSet=rs0
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/whiskey-vault
+MONGODB_URI=mongodb://host.docker.internal:27017/whiskey-vault?replicaSet=rs0
 
 # NextAuth Configuration
-# For local development use http://localhost:3000
-# For production use your actual domain (https://yourdomain.com)
+# For development: http://localhost:3000
+# For production: https://your-domain.com
 NEXTAUTH_URL=http://localhost:3000
 
-# NextAuth Secret - IMPORTANT: Generate a secure random string
-# You can generate one using: openssl rand -base64 32
-# Or visit: https://generate-secret.vercel.app/32
-NEXTAUTH_SECRET=your-secret-key-here-min-32-characters
+# Generate a secure secret: openssl rand -base64 32
+NEXTAUTH_SECRET=your-secret-key-here
+
+# Public App URL (used by client-side code)
+# Should match NEXTAUTH_URL
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Cloudinary Configuration (Optional - for image uploads)
 # Get these from your Cloudinary dashboard: https://cloudinary.com/console
-CLOUDINARY_CLOUD_NAME=your-cloud-name
-CLOUDINARY_API_KEY=your-api-key
-CLOUDINARY_API_SECRET=your-api-secret
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+# Application Port (optional, defaults to 3000)
+PORT=3000
+
+# Node Environment
+# Options: development, production, test
+NODE_ENV=development
+
+# Database Seed Admin Credentials (used by seed script)
+# Default: admin@whiskeyvault.com / admin123
+ADMIN_EMAIL=admin@whiskeyvault.com
+ADMIN_PASSWORD=admin123
