feat: standardize PORT configuration across the application and Docker setup

--- a/.env.example
+++ b/.env.example
@@ -7,26 +7,32 @@
 # For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/whiskey-vault
 MONGODB_URI=mongodb://host.docker.internal:27017/whiskey-vault?replicaSet=rs0
 
+# Application Port
+# Development: 3005 (or any available port)
+# Production: 80 or 443 (with reverse proxy), or any custom port
+# Default: 3000 if not specified
+# Note: When changing PORT, ensure NEXTAUTH_URL and NEXT_PUBLIC_APP_URL are updated accordingly
+PORT=3000
+
 # NextAuth Configuration
-# For development: http://localhost:3005
+# For development: http://localhost:${PORT}
 # For production: https://your-domain.com
-NEXTAUTH_URL=http://localhost:3005
+# IMPORTANT: Update this URL to match your PORT setting above
+NEXTAUTH_URL=http://localhost:3000
 
 # Generate a secure secret: openssl rand -base64 32
 NEXTAUTH_SECRET=your-secret-key-here
 
 # Public App URL (used by client-side code)
 # Should match NEXTAUTH_URL
-NEXT_PUBLIC_APP_URL=http://localhost:3005
+# IMPORTANT: Update this URL to match your PORT setting above
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Cloudinary Configuration (Optional - for image uploads)
 # Get these from your Cloudinary dashboard: https://cloudinary.com/console
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-
-# Application Port (optional, defaults to 3005)
-PORT=3005
 
 # Node Environment
 # Options: development, production, test
