--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,19 +10,20 @@ services:
       target: runner
       args:
         # Build-time environment variables
+        - PORT=${PORT:-3000}
         - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
         - MONGODB_URI=${MONGODB_URI}
         - NEXTAUTH_URL=${NEXTAUTH_URL}
         - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
     ports:
       # Map to custom port if needed
-      - "${PORT:-3005}:3005"
+      - "${PORT:-3000}:${PORT:-3000}"
     volumes:
       # Volume for uploaded images
       - whiskey-uploads:/app/uploads
     environment:
       - NODE_ENV=production
-      - PORT=3005
+      - PORT=${PORT:-3000}
       # MongoDB connection for production
       - MONGODB_URI=${MONGODB_URI}
       - NEXTAUTH_URL=${NEXTAUTH_URL}
