--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node scripts/start.js",
     "lint": "next lint",
     "seed": "tsx scripts/seed.ts",
-    "clear-db": "node scripts/clear-database.js"
+    "clear-db": "node scripts/clear-database.js",
+    "backfill-barcodes": "tsx scripts/backfill-vault-barcodes.ts",
+    "list-users": "tsx scripts/list-users.ts"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,6 +32,7 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-zxing": "^2.1.0",
+    "recharts": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.3"
   },
