--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-qr-code": "^2.0.18",
+    "react-swipeable": "^7.0.2",
     "react-zxing": "^2.1.0",
     "recharts": "^3.1.0",
     "tailwindcss": "^3.4.1",
