feat: add enhanced barcode scanner component with camera support
- Integrated @ericblade/quagga2 for barcode scanning functionality.
- Implemented camera permission checks and handling.
- Added UI for scanning, including torch toggle and manual entry options.
- Included image upload feature for barcode scanning from images.
- Updated manifest.json to include camera permissions and shortcuts.
- Added beep sound effect for successful scans.
- Created TypeScript definitions for quagga2 module.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,5 +39,26 @@
       "type": "image/png",
       "purpose": "maskable"
     }
+  ],
+  "permissions": [
+    "camera"
+  ],
+  "prefer_related_applications": false,
+  "categories": ["lifestyle", "productivity"],
+  "shortcuts": [
+    {
+      "name": "Scan Barcode",
+      "short_name": "Scan",
+      "description": "Scan a bottle barcode",
+      "url": "/scan",
+      "icons": [{ "src": "/wv-favicon_256.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Add Bottle",
+      "short_name": "Add",
+      "description": "Add a new bottle",
+      "url": "/bottles/add",
+      "icons": [{ "src": "/wv-favicon_256.png", "sizes": "96x96" }]
+    }
   ]
 }
