--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "list-users": "tsx scripts/list-users.ts"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.8.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.12.1",
     "@types/react": "^18.3.17",
