feat: Implement pour session management to prevent orphaned pours
- Added validation to ensure each pour is associated with a session.
- Introduced hooks to log orphaned pours and provide a safety net.
- Created static method for safe pour creation with session assignment.
- Developed cron job endpoint to check for orphaned pours and fix them.
- Added scripts for monitoring, fixing, and debugging orphaned pours.
- Updated API documentation to reflect new session management features.
- Refactored Dymo label generation to support Code 128 barcodes.
- Enhanced error handling and logging for pour creation and session management.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "seed": "tsx scripts/seed.ts",
     "clear-db": "node scripts/clear-database.js",
     "backfill-barcodes": "tsx scripts/backfill-vault-barcodes.ts",
-    "list-users": "tsx scripts/list-users.ts"
+    "list-users": "tsx scripts/list-users.ts",
+    "debug-pour-sessions": "tsx scripts/debug-pour-sessions.ts",
+    "fix-orphaned-pours": "tsx scripts/fix-orphaned-pours.ts",
+    "monitor-orphaned-pours": "tsx scripts/monitor-orphaned-pours.ts",
+    "test-pour-creation": "tsx scripts/test-pour-creation.ts"
   },
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
