--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.9.4",
