feat: integrate external database for UPC lookups and enhance MasterBottle model with additional fields

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "debug-pour-sessions": "tsx scripts/debug-pour-sessions.ts",
     "fix-orphaned-pours": "tsx scripts/fix-orphaned-pours.ts",
     "monitor-orphaned-pours": "tsx scripts/monitor-orphaned-pours.ts",
-    "test-pour-creation": "tsx scripts/test-pour-creation.ts"
+    "test-pour-creation": "tsx scripts/test-pour-creation.ts",
+    "test-external-db": "tsx scripts/test-external-db.ts"
   },
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
