feat: Implemented test search route for bottle deduplication and search pattern analysis
- Added a new API route for testing bottle searches with various patterns and expected results.
- Integrated session validation to ensure only admin users can access the route.
- Implemented search logic to check for expected products and various search patterns in the database.
- Added brand name extraction function and tests for different bottle names.
- Enhanced error handling and logging for better debugging.

feat: Created date utility functions for consistent date formatting

- Added utility functions for formatting dates and times for UI display.
- Included options for relative date formatting and weekday inclusion.
- Implemented functions to check if two dates are on the same day and to get relative time descriptions.

feat: Developed scripts for analyzing FWGS product gaps and checking product existence

- Created a script to analyze the gap between FWGS products and those imported into the database.
- Implemented functionality to check for specific FWGS products and analyze N/A proof products.
- Added a script to check individual FWGS products and display relevant information.

feat: Implemented import functionality for missing FWGS products

- Developed a script to import missing FWGS products into the database with error handling.
- Added options for dry run and specific ID checks during the import process.
- Included mapping for FWGS categories and parsing for UPCs and proof values.

chore: Added additional scripts for checking and importing FWGS products

- Created scripts to check for variations of specific products and total counts in the database.
- Implemented functionality to import missing products with detailed logging and error reporting.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "fix-orphaned-pours": "tsx scripts/fix-orphaned-pours.ts",
     "monitor-orphaned-pours": "tsx scripts/monitor-orphaned-pours.ts",
     "test-pour-creation": "tsx scripts/test-pour-creation.ts",
-    "test-external-db": "tsx scripts/test-external-db.ts"
+    "test-external-db": "tsx scripts/test-external-db.ts",
+    "analyze-fwgs-gap": "tsx scripts/analyze-fwgs-gap.ts",
+    "check-fwgs-product": "tsx scripts/check-fwgs-product.ts",
+    "import-fwgs-fix": "tsx scripts/import-fwgs-fix.ts",
+    "import-missing-fwgs": "tsx scripts/import-missing-fwgs.ts"
   },
   "dependencies": {
     "@ericblade/quagga2": "^1.8.4",
